--- a/app/Resources/views/Ath/Main/Post/ten_posts.html.twig
+++ b/app/Resources/views/Ath/Main/Post/ten_posts.html.twig
@@ -1,13 +1,41 @@
 {% for onePost in posts %}
-    <div class="panel panel-default">
+    <div class="panel panel-default" id="panel{{ onePost.id }}" data-id="{{ onePost.id }}">
        <div class="panel-heading">
-        <span class="pull-right">
-          {{ onePost.createdAt |localizeddate('short', "none")}}
-        </span>
-        <a href="{{ path('ath_user_show_profile',{'slug': onePost.createdBy.slug }) }}">
-            <img class="" src="{{ onePost.createdBy.webPath | imagine_filter('mini') }}" alt="{{ onePost.createdBy }}" title="{{ onePost.createdBy }}" />
-        </a>
+        <div class="row" style="font-size: 12px">
+          <div class="col-md-10">
+            <a href="{{ path('ath_user_show_profile',{'slug': onePost.createdBy.slug }) }}">
+              <img class="" src="{{ onePost.createdBy.webPath | imagine_filter('micro') }}" alt="{{ onePost.createdBy }}" title="{{ onePost.createdBy }}" />
+            <i>{{ onePost.createdBy }}</i>
+            </a>
+              {% if onePost.getParent() is not null %}
+              {% set onePostTemp = onePost.getParent() %}
+              
+              {% if onePostTemp.createdBy == app.user %}
+                 à re-publié un article datant du {{ onePostTemp.createdAt |localizeddate('short', "none")}}
+              {% else %}
+                 a partagé la publication de <a href="{{ path('ath_user_show_profile',{'slug': onePostTemp.createdBy.slug }) }}">{{ onePostTemp.createdBy }}</a>
+              {% endif %}
+            
+            {% endif %}
+          </div>
+          <div class="col-md-2">
+            {# <span class="pull-right"> #}
+              {{ onePost.createdAt |localizeddate('short', "none")}}
+              {% if onePost.createdBy == app.user %}
+                  <a href="#" class="removePost" data-confirm="Voulez-vous vraiment supprimer cette article?"> Supprimer</a>
+              {% endif %}
+            {# </span> #}
+
+          </div>
+        </div>
       </div>
+      {% set realId = onePost.id %}
+
+      {# shamble post and parent #}
+      {% if onePost.getParent() is not null %}
+          {% set onePost = onePost.getParent() %}
+      {% endif %}
+        
        {% if onePost.filePosts| length > 0 %}
           <div class="panel-body">
             <img class="" src="/{{ onePost.filePosts[0].webPath  }}" alt="{{ onePost.filePosts[0] }}" title="{{ onePost.filePosts[0] }}" style="width: 100%;" />
@@ -31,7 +59,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-              <a href="#" style="" class="seeComment" data-id="seeComment{{onePost.id}}">
+              <a href="#" style="" class="seeComment" data-id="seeComment{{realId}}">
                 <i class="fa fa-comments"></i>
                   {% if onePost.getComments() | length != 0 %}
                       {{ onePost.getComments() | length}}
@@ -40,12 +68,12 @@
               </a>
             </div>
             <div class="col-md-4">
-                <a href="#">partager</a>
+                <a href="{{ path('ath_main_share_post', {'idPost': onePost.id }) }}">partager</a>
             </div>
           </div>
         </div>
-          <hr>
-        <div id="seeComment{{onePost.id}}" class="hide-comments">
+        <hr>
+        <div id="seeComment{{realId}}" class="hide-comments" data-id="{{ realId }}">
 
           <div class="row">
               <div class="panel-body">
@@ -53,14 +81,17 @@
                   {% include '@ath_main_path/Includes/user.html.twig' with {'user': app.user, 'img_filter' : 'mini' } %}
                 </div>
                 <div class="col-md-9">
-                  <textarea placeholder="Press Enter for send" data-id="{{ onePost.Id }}" class="autoExpand form-control"></textarea>
+                  <textarea placeholder="{{ "placeholder.comment" | trans({}, 'home') }}" data-id="{{ onePost.Id }}" class="autoExpand form-control"></textarea>
+                  {% if onePost.getComments() | length > 10 %}
+                      <a href="#" id="voirPlus{{ realId }}" class="moreComment" data-confirm="{{ onePost.getComments() | length }}" data-label="{{ onePost.Id }}" data-id="1">Voir plus de commentaires</a>
+                  {% endif %}
                 </div>
               </div>
           </div>
         <div class="row">
           
             {# bouuuu #}
-            <div class="panel-body">
+            <div id="panelComment{{ realId }}" class="panel-body panelComment">
 
                 {% for oneComment in onePost.getTenLastComments() %}
                   {% set auteur = oneComment.createdBy %}
@@ -69,12 +100,12 @@
 
                       <div class="row">
                         <div class="col-xs-3 col-sm-2 col-md-2">
-                          <a href="{{ path('ath_user_show_profile',{'slug': auteur }) }}">
-                            {% include '@ath_main_path/Includes/user.html.twig' with {'user': auteur, 'img_filter' : 'mini' } %}
+                          <a href="{{ path('ath_user_show_profile',{'slug': auteur.slug }) }}">
+                            {% include '@ath_main_path/Includes/user.html.twig' with {'user': auteur, 'img_filter' : 'micro' } %}
                           </a>
                         </div>
                         <div class="col-xs-9 col-sm-3 col-md-3">
-                          <a href="#" class="us_name">{{auteur}}</a>
+                          <a href="{{ path('ath_user_show_profile',{'slug': auteur.slug }) }}" class="us_name">{{auteur}}</a>
                           <p class="us_m_date">{{oneComment.createdAt |localizeddate('short', "none") }}</p>
                         </div>
                        {#  <div class="col-xs-8 col-sm-8 col-md-8">
