--- a/app/Resources/views/Ath/Main/index.html.twig
+++ b/app/Resources/views/Ath/Main/index.html.twig
@@ -135,7 +135,7 @@
                           {{ onePost.contenu }}
                         </div>
                         <hr>
-                        <div class="row">
+                        <div class="row actions-post">
                           <div class="block-action-post">
                             <div class="col-md-1">
                             </div>
@@ -151,7 +151,7 @@
                                   {% if onePost.getComments() | length != 0 %}
                                       {{ onePost.getComments() | length}}
                                   {% endif %}
-                                  Commenter
+                                  Commentaire(s)
                               </a>
                             </div>
                             <div class="col-md-4">
