Templates password bootstrap

--- a/app/Resources/AthUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/edit_content.html.twig
@@ -65,11 +65,12 @@
 	<br/>
 	<br/>
     </div>
-    <div>
+    <div class="pull-right">
 
 		{% if canDemandeCelebrite %}
 		    <a href="{{ path('ath_user_demande_celebrite') }}" class="btn btn-info"> {{ "faire.demande.celebrite" | trans({}, 'home') }}</a>
 		{% endif %}
+		<br>
     </div>
 </form>
 </div>
