--- a/app/Resources/views/Ath/Admin/User/password.html.twig
+++ b/app/Resources/views/Ath/Admin/User/password.html.twig
@@ -1,16 +1,24 @@
 {% extends '::base_admin.html.twig' %}
 {% block body %}
 <h2>
-    {{ "user.changepassword.title" | trans({}, 'administration') }}
+    {{ "user.changepassword.title" | trans({'%user%': user}, 'administration') }}
 </h2>
-<form action="{{ path('admin_ath_user_user_password', { 'id': Utilisateur.id })}}" method="POST" {{ form_enctype(form) }} >
-    {{ form_rest(form) }}
-    <div class="row-fluid">
-        <div class="">
-            <a href="{{ path('admin_ath_user_user_list') }}" class="btn">{{ "user.changepassword.cancel" | trans({}, 'administration') }}</a>
-            <input type="submit" class="btn btn-primary" value="{{ "user.changepassword.save" | trans({}, 'administration') }}">
-        </div>
+<br>
+<div class="row">
+    <div class="col-md-12">
+		<form action="{{ path('admin_ath_user_user_password', { 'id': user.id })}}" method="POST">
+		    {{ form_row(form.new.first) }}
+		    <br><br>
+		    {{ form_row(form.new.second) }}
+		    <br><br>
+		    <div class="row-fluid">
+		        <div class="">
+		            <a href="{{ path('admin_ath_user_user_list') }}" class="btn">{{ "user.changepassword.cancel" | trans({}, 'administration') }}</a>
+		            <input type="submit" class="btn btn-primary" value="{{ "user.changepassword.save" | trans({}, 'administration') }}">
+		        </div>
+		    </div>
+		    {{ form_rest(form) }}
+		</form>
     </div>
-</form>
-
+</div>
 {% endblock %}
