--- a/web/sass/front/partials/practice.scss
+++ b/web/sass/front/partials/practice.scss
@@ -183,3 +183,16 @@
     background-repeat:no-repeat;
     background-position: right;
 }
+
+.post-error-list {
+  // float: left;
+  margin-left: 15px;
+  color: red;
+  font-weight: bold;
+}
+
+// .row {
+//   margin-left: -15px;
+//   margin-right: -15px;
+//   margin-bottom: 50px;
+// }
