--- a/app/Resources/AthUserBundle/views/ChangePassword/changePassword_content.html.twig
+++ b/app/Resources/AthUserBundle/views/ChangePassword/changePassword_content.html.twig
@@ -1,8 +1,25 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
-    </div>
-{{ form_end(form) }}
+<h1 class="title-line">{{ "change_password.title" | trans({}, 'home') }}</h1>
+<div class="row">
+    <div class="col-md-12">
+		<form action="{{ path('fos_user_change_password') }}" method="POST">
+      		{{ form_row(form._token) }}
+      		{{ form_row(form.current_password,{'attr': {'class': 'form-control'} }) }}
+      		<br><br>
+      		{{ form_row(form.plainPassword.first, {'attr': {'class': 'form-control'} } ) }}
+      		<br><br>
+      		{{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'} } ) }}
+			<br><br>
+			<div class="row">
+				<input type="submit" class="btn btn-default" value="{{ 'change_password.submit'|trans }}" />
+			</div>
+		</form>
+	</div>
+</div>
+
+<script type="text/javascript">
+	$(document).ready(function() {
+		$("#fos_user_change_password_form_current_password").val('');
+	});
+</script>
