--- a/app/Resources/views/base_admin.html.twig
+++ b/app/Resources/views/base_admin.html.twig
@@ -6,12 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %} Athleteec {% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('sonata/atixheader/css/shared/bootstrap.css') }}" type="text/css" media="all" />
-            <link rel="stylesheet" href="{{ asset('components/font-awesome/css/font-awesome.min.css') }}" type="text/css" media="all" />
+            <link rel="stylesheet" href="{{ asset('compiled/front/common.css') }}" type="text/css" media="all" />
+            <link rel="stylesheet" href="/sonata/atixheader/css/shared/bootstrap.css" type="text/css" media="all" />
+            {# <link rel="stylesheet" href="/components/font-awesome/css/font-awesome.min.css" type="text/css" media="all" /> #}
             {# <link rel="stylesheet" href="{{ asset('css/main.css') }}" type="text/css" media="all" /> #}
         {% endblock %}
         {% block scripts_head %}
-            <script type="text/javascript" src="{{ asset('components/jquery/jquery.min.js') }}"></script>
+            <script type="text/javascript" src="/components/jquery/jquery.min.js"></script>
+            <script type="text/javascript" src="/sonata/sonataadmin/vendor/jqueryui/ui/minified/jquery-ui.min.js"></script>
          {% endblock %}
 
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
@@ -22,8 +24,7 @@
             {% block body %}{% endblock %}
         </div>
         {% block javascripts %}
-            <script type="text/javascript" src="{{ asset('components/bootstrap/js/bootstrap.min.js') }}"></script>
-            <script type="text/javascript" src="{{ asset('assets/js/main.js') }}"></script>
+            <script type="text/javascript" src="/components/bootstrap/js/bootstrap.min.js"></script>
 
             <script type="text/javascript">
             $(document).ready(function($) {
