--- a/web/sass/front/partials/practice.scss
+++ b/web/sass/front/partials/practice.scss
@@ -191,6 +191,17 @@
   font-weight: bold;
 }
 
+.active-flag {
+  // padding: 10px;
+  // border: 0px #666 solid;
+  // background-color: grey;
+  // color: #fff;
+  // background-color: #b91773;
+  // border-color: #fff;
+    padding: 10px 40px;
+    background: #dddddd;
+    border-radius: 25px;
+}
 // .row {
 //   margin-left: -15px;
 //   margin-right: -15px;
